# flight_booking

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  local.toml.example  run
migration/: Cargo.toml
migration/src/: helpers.rs  lib.rs  m20260111_201209_add_email_verification_resend_tracking.rs  m20260111_201209_create_users.rs  m20260111_201247_create_addresses.rs  m20260111_201309_add_login_tracking_fields.rs  m20260111_201312_create_airports.rs  m20260111_201319_create_flights.rs  m20260111_201326_create_booking.rs  m20260111_201350_create_passengers.rs  m20260111_201358_create_checkins.rs  m20260111_201427_create_boarding_passes.rs
proto/: administration.proto
settings/: dev.toml  local.toml  prod.toml  stag.toml
src/: lib.rs
src/api/: mod.rs
src/api/address/: address.rs
src/api/airport/: airport.rs
src/api/auth/: auth.rs
src/api/boarding_pass/: boarding_pass.rs  mod.rs
src/api/booking/: booking.rs
src/api/checkin/: checkin.rs
src/api/flight/: flight.rs  mod.rs
src/api/passenger/: mod.rs  passenger.rs
src/api/server/: mod.rs
src/application/: mod.rs
src/core/: app_state.rs  mod.rs  user_context.rs
src/domain/: business_rule_interface.rs  error.rs  mod.rs
src/infrastructure/: error.rs  mod.rs
src/presentation/: mod.rs
src/utils/: Cargo.toml
src/utils/src/: date_time.rs  dir.rs  lib.rs
src/utils/src/redis_client/: error.rs  instance.rs  mod.rs  session.rs
static/secret_key/: private_access_rsa_key.pem  private_refresh_rsa_key.pem  public_access_rsa_key.pem  public_refresh_rsa_key.pem
(+372 files in other folders)
