[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.6.0-rc.3"
tokio = { version = "1.48.0", features = ["full"] }
log = "0.4.29"
axum = "0.8.7"
chrono = "0.4.42"
jsonwebtoken = { version = "10.1.0", default-features = false, features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.133"
uuid = { version = "1.19.0", features = ["v4"] }
utoipa = "5.4.0"
once_cell = "1.21.3"
redis = { version = "1.0.0", features = ["tokio-comp", "connection-manager"] }
config = "0.15.0"
thiserror = "1.0.69"